Magazine9 컨텐츠 클릭시 상세페이지 이동

--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -159,6 +159,18 @@ $(document).ready(function(){
  }
  
  
+ var paramMz9 = location.search
+ 
+ var params = new URLSearchParams(paramMz9);
+  
+ var getParam= params.get('mgzSq');
+  
+ console.log("getParam :"+getParam);
+ 
+ if(getParam !=""){
+	 selectMgz9Dtl(getParam);
+ }
+ 
  /*
   * MGZ9 상세 조회
   * PARAM : #MGZ_SQ
