--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -8,8 +8,11 @@
     	.ellipsis{
 			overflow:hidden;
 			text-overflow: ellipsis;
-			width:150px;
+			width:100%;
 			height:32px;
+			display: -webkit-box;
+            -webkit-line-clamp: 2; 
+            -webkit-box-orient: vertical;
     	};
     </style>
     
@@ -125,7 +128,7 @@
 	   	          loop: true,
 	   	          loopFillGroupWithBlank: true,
 	   	       	  autoplay: {
-	               delay: 300000,
+	               delay: 500000,
 	               disableOnInteraction: false,
 	             },
 	   	          pagination: {
@@ -145,7 +148,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	       	  autoplay: {
-		               delay: 300000,
+		               delay: 500000,
 		               disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -165,7 +168,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	       	  autoplay: {
-		               delay: 300000,
+		               delay: 500000,
 		               disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -185,7 +188,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	       	  autoplay: {
-		               delay: 300000,
+		               delay: 500000,
 		               disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -207,7 +210,7 @@
 	   	          loop: true,
 	   	          loopFillGroupWithBlank: true,
 	   	          autoplay: {
-	               delay: 3000,
+	               delay: 5000,
 	               disableOnInteraction: false,
 	             },
 	   	          pagination: {
@@ -227,7 +230,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	          autoplay: {
-		               delay: 3000,
+		               delay: 5000,
 		               disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -247,7 +250,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	          autoplay: {
-		               delay: 3000,
+		               delay: 5000,
 		               disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -267,7 +270,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	          autoplay: {
-		               delay: 3000,
+		               delay: 5000,
 		               disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -289,7 +292,7 @@
 	   	          loop: true,
 	   	          loopFillGroupWithBlank: true,
 	   	      	  autoplay: {
-	              delay: 3000,
+	              delay: 5000,
 	              disableOnInteraction: false,
 	             },
 	   	          pagination: {
@@ -309,7 +312,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	      	  autoplay: {
-		              delay: 3000,
+		              delay: 5000,
 		              disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -328,7 +331,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	      	  autoplay: {
-		              delay: 3000,
+		              delay: 5000,
 		              disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -347,7 +350,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	      	  autoplay: {
-		              delay: 3000,
+		              delay: 5000,
 		              disableOnInteraction: false,
 		             },
 		   	          pagination: {
