--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -76,7 +76,8 @@
 							
 						    
 						    <!-- 작품 리스트  -->
-						  	<div class="grid" >
+	 						  	<div class="grid" style= "cursor: pointer;">
+
 								 
 							</div>
 					
