--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -317,7 +317,8 @@
 							
 						    
 						    <!-- 작품 리스트  -->
-						  	<div class="grid">
+	 						  	<div class="grid" style= "cursor: pointer;">
+
 								 
 							</div>
 						  	<div class="text-center mg_t50">
