--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
@@ -65,7 +65,7 @@
 							</style>
 							
 							<!-- 작품 리스트  -->
-						  	<div class="grid">
+						  	<div class="grid" style= "cursor: pointer;">
 								 
 							</div>
 							
