--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -765,7 +765,7 @@ function myWorkReg(){
 		
 		
 		
-		modalConfirm("알림", "시스템 기능 개선으로 인하여 삭제 및 비공개 처리가 불가능합니다. \n등록하시겠습니까?", 
+		modalConfirm("알림", "딜링아트 내 검색/노출 될 수 있지만 소유자의 계정 또는 콜렉터명이 노출되지 않습니다. \n등록하시겠습니까?", 
     		function(confirm){
     			if(confirm){
     				$.ajax({
@@ -776,7 +776,6 @@ function myWorkReg(){
     			        processData : false,
     			        success: function(data) {
     			        	if(data != 0 || data != null || data != ""){
-    			        		modalAlertShow("성공적으로 저장되었습니다.", "myWork");
     			        	}
     			        },
     			        error: function(error) {
