--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -60,7 +60,8 @@
 							
 						    
 						    <!-- 작품 리스트  -->
-						  	<div class="grid">
+					  	<div class="grid" style= "cursor: pointer;">
+
 								 
 							</div>
 						
@@ -291,7 +292,7 @@ function myWorkList(){
 				html += '		<div class="regs" >';
 				html += '			<a href="#" class="reg-a" workSq="'+ result[i].workSq +'" onclick="dealReg(this)"><span>거래 등록</span></a>';
 				html += '			<a href="#" class="cor-a" workSq="'+ result[i].workSq +'" onclick="myWorkMod(this)"><span>작품 수정</span></a>';
-				html += '			<a href="javascript:workDetailMove('+ result[i].workSq +')" ><span>상세보기</span></a>';
+				html += '			<a href="javascript:workDetailMove('+ result[i].workSq +')" class="cor-a"><span>상세보기</span></a>';
 				html += '		</div>';
 				html += '	</div>';
 				html += '</div>';
@@ -491,17 +492,10 @@ $(document).on("click", ".heart", function(){
 	}
  
  
-	function workDetailMove(workSq) {
-		
-		pageGoPost({
-			url:"/workDetail",
-			target:"_self",
-			vals:[
-				["workSq", workSq]
-			]
-		});
-		
-	}
+  	function workDetailMove(workSq){
+  	 	location.href="/workDetail?workSq="+workSq;
+  	}
+
 
 	function biddingMove(workSq) {
 		
