네이버/구글 SEO

--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -167,8 +167,8 @@ $(document).ready(function(){
   
  console.log("getParam :"+getParam);
  
- if(getParam !=""){
-	 selectMgz9Dtl(getParam);
+ if(getParam !="" && getParam != null){
+	selectMgz9Dtl(getParam);
  }
  
  /*
