--- a/src/main/resources/templates/thymeleaf/fo/about/terms_2.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_2.html
@@ -35,7 +35,7 @@
 								
 							<딜링아트>('www.dealing-art.com' 이하 '딜링아트 닷컴')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.<br/>
 							<br>
-							○ 이 개인정보처리방침은 2022년 [*]월 [*]일 부터 적용됩니다.<br/><br/>
+							○ 이 개인정보처리방침은 2022년 6월 20일 부터 적용됩니다.<br/><br/>
 							
 							<p>제1조 개인정보의 처리 목적</p>
 							<br>
@@ -287,7 +287,7 @@
 							
 							부칙 <br/>
 							제1조 <br/>
-							① 개인정보처리방침은 2022년 [*]월 [*]일부터 적용됩니다.
+							① 개인정보처리방침은 2022년 6월 20일부터 적용됩니다.
 						
 						</div>
 						
