--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -63,7 +63,7 @@
 	<meta name=”description” content=”개인간 미술품 거래 마켓플레이스”>
 	<meta name=”keywords” content=”미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart,”>
 	<meta property="og:url" content="https://www.dealing-art.com">
-	<meta property="og:image" content="https://www.dealing-art.com/resources/img/logo.png">
+	<meta property="og:image" content="https://www.dealing-art.com/resources/img/logo_new.png">
 	<meta property="og:type" content="website">
     
 	
@@ -140,7 +140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<input type="hidden" id="appDevice">
 		
 		<div class="head">
-			<div class="h-logo"><a href="/main"><img src="resources/img/logo.png" /></a></div>
+			<div class="h-logo"><a href="/main"><img src="resources/img/logo_new.png" /></a></div>
 			<div class="h-gnb">
 				<div class="navbox">
 					<nav>
