--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -351,7 +351,7 @@
 													<td th:if="${#strings.equals(result.payMntInfo2.payMethod, '신용카드')} and ${not #strings.isEmpty(result.payMntInfo1.payType)}" th:text="|[${result.payMntInfo2.payType}] ${result.payMntInfo2.issueCompanyName}카드 카드번호 ${result.payMntInfo2.cardNo}|">신한은행 000-000-0000</td>
 													<td th:if="${result.payMntInfo2.payMethod.toString().equals('계좌이체')}" th:text="|${result.payMntInfo2.payMethod} ${result.payMntInfo2.bankName}|">신한은행 000-000-0000</td>
 													<td th:if="${result.payMntInfo2.payMethod.toString().equals('가상계좌')}" th:text="|${result.payMntInfo2.payMethod} ${result.payMntInfo2.bankName} ${result.payMntInfo2.accountNo}|">신한은행 000-000-0000</td>
-													<td th:if="${result.payMntInfo2.payMethod.toString().equals('결제완료')}" th:text="|결제 금액 0원이므로 자동 결제완료 처리|">신한은행 000-000-0000</td>
+													<td th:if="${result.payMntInfo2.payMethod.toString().equals('결제완료')}" th:text="|자동 결제완료 처리 (결제 금액 0원)|">신한은행 000-000-0000</td>
 												</tr>
 												<tr>
 													<th>결제 내역</th>
@@ -404,7 +404,7 @@
 									
 										<div class="mbox-1">
 											<div class="pay-link">
-												<!-- <a href="javascript:void(0);" class="pay-1" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-2.png" /><span>신용카드</span></a> -->
+												<a href="javascript:void(0);" class="pay-1" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-2.png" /><span>신용카드</span></a>
 												<!-- <a href="#" class="pay-2" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-3.png" /><span>무통장입금</span></a> -->
 												<!-- <a href="javascript:void(0);" class="pay-3" value="ACCT" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-6.png" /><span>실시간계좌이체</span></a> -->
 												<a href="javascript:void(0);" class="pay-4" value="VACCT" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-4.png" /><span>가상계좌</span></a>
