--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -210,7 +210,7 @@
 	   	          loop: true,
 	   	          loopFillGroupWithBlank: true,
 	   	          autoplay: {
-	               delay: 5000,
+	               delay: 500000,
 	               disableOnInteraction: false,
 	             },
 	   	          pagination: {
@@ -230,7 +230,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	          autoplay: {
-		               delay: 5000,
+		               delay: 500000,
 		               disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -250,7 +250,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	          autoplay: {
-		               delay: 5000,
+		               delay: 500000,
 		               disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -270,7 +270,7 @@
 		   	          loop: true,
 		   	          loopFillGroupWithBlank: true,
 		   	          autoplay: {
-		               delay: 5000,
+		               delay: 500000,
 		               disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -292,7 +292,7 @@
 	   	          loop: true,
 	   	          loopFillGroupWithBlank: true,
 	   	      	  autoplay: {
-	              delay: 5000,
+	              delay: 500000,
 	              disableOnInteraction: false,
 	             },
 	   	          pagination: {
@@ -310,9 +310,9 @@
 		   	          slidesPerView: 1,
 		   	          slidesPerGroup: 1,
 		   	          loop: true,
-		   	          loopFillGroupWithBlank: true,
-		   	      	  autoplay: {
-		              delay: 5000,
+		   	          loopAdditionalSlides : 1,
+		   	          autoplay: {
+		              delay: 50000,
 		              disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -329,9 +329,9 @@
 		   	          slidesPerView: 1,
 		   	          slidesPerGroup: 1,
 		   	          loop: true,
-		   	          loopFillGroupWithBlank: true,
-		   	      	  autoplay: {
-		              delay: 5000,
+		   	          loopAdditionalSlides : 1,
+		   	          autoplay: {
+		              delay: 50000,
 		              disableOnInteraction: false,
 		             },
 		   	          pagination: {
@@ -348,9 +348,9 @@
 		   	          slidesPerView: 1,
 		   	          slidesPerGroup: 1,
 		   	          loop: true,
-		   	          loopFillGroupWithBlank: true,
-		   	      	  autoplay: {
-		              delay: 5000,
+		   	          loopAdditionalSlides : 1,
+		   	          autoplay: {
+		              delay: 50000,
 		              disableOnInteraction: false,
 		             },
 		   	          pagination: {
