--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
@@ -198,6 +198,17 @@
 										<label for="z33" class="wd-145"><span></span>사진</label>
 									</td>
 								</tr>
+								<tr>
+									<th><span class="my-red">공개여부</span></th>
+									<td>
+										<div class="radio-2">
+											<input type="radio" id="x1" name="useYn" value="Y" >
+											<label for="x1" class="wd-145"><span></span>공개</label>
+											<input type="radio" id="x2" name="useYn" value="N" >
+											<label for="x2"><span></span>비공개</label>
+										</div>
+									</td>
+								</tr>
 							</table>
 						</div>
 					</div>
