--- a/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
@@ -41,7 +41,7 @@
 									<!-- 비밀번호 변경 전 -->
 									<div class="input-box input-group" id="div_originalMbrPasswrd">
 										<input type="password" class="input-3" placeholder="비밀번호 변경을 하시려면 비밀번호 변경 버튼을 눌러주세요." disabled/>
-										<button type="button" class="group-btn" onclick="btn_newPasswrd();">비빌번호 변경</button>
+										<button type="button" class="group-btn" onclick="btn_newPasswrd();">비밀번호 변경</button>
 									</div>
 									
 									<!-- 비밀번호 변경 -->
