--- a/src/main/resources/templates/thymeleaf/result_work.html
+++ b/src/main/resources/templates/thymeleaf/result_work.html
@@ -361,11 +361,11 @@
 									<div class="uli-list">
 										<!-- <div class="uli-img uli-hart-on"> 하트 온 -->
 										<div class="uli-img">
-											<th:block th:if="${workList.dealTypCd.toString().equals('A')}"><!-- 경매면 -->
+											<th:block th:if="${workList.dealTypCd.toString().equals('A') }"><!-- 경매면 -->
 												<img th:src="${workList.workMainImgUrl}" style="width:100%; height:100%;cursor:pointer;" th:attr="onclick=|dealDetail('${workList.workSq}')|"/>
 											</th:block>
 											
-											<th:block th:if="${workList.dealSttsCd.toString().equals('TP')}"><!-- 판매 중이면 -->
+											<th:block th:if="${workList.dealTypCd.toString().equals('S')}"><!-- 정찰가 -->
 												<img th:src="${workList.workMainImgUrl}" style="width:100%; height:100%;cursor:pointer;" th:attr="onclick=|workDetail('${workList.workSq}')|" />
 											</th:block>
 											
