--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -512,8 +512,8 @@
 										<input type="checkbox" id="cbx_bidAgree4"/>
 										<label for="cbx_bidAgree4"><span></span>
 											<div class="check-info">
-												<p>모든 미술품의 <b class="c-red dib">운송</b>은 <b class="c-red dib">직거래</b>가 불가능합니다.</p>
-												구매자는 회사가 제공하는 <b class="c-red dib">배송서비스</b>를 필수로 사용해야 됩니다. 
+												<p>모든 미술품의 <b class="c-red ">운송</b>은 <b class="c-red ">직거래</b>가 불가능합니다.</p>
+												구매자는 회사가 제공하는 <b class="c-red ">배송서비스</b>를 필수로 사용해야 됩니다. 
 											</div>
 										</label>
 									</div>
@@ -545,7 +545,7 @@
 										<label for="cbx_bidAgree5"><span></span>
 											<div class="check-info">
 												<p>딜링아트의 최신 이용정책을 모두 확인했습니다.</p>
-												안전한 거래를 위해 반드시 숙지해야 될 패널티규정, 부적절행위 등에 대한 이용정책을 확인했습니다. 
+												안전한 거래를 위해 반드시 숙지해야 될 패널티규정,<br> 부적절행위 등에 대한 이용정책을 확인했습니다. 
 											</div>
 										</label>
 									</div>
