--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5246,3 +5246,12 @@ position: relative;background-color: #fbfbfb;}
 /*0623*/
 .rad-mg-1{margin-top:30px; margin-bottom:0; text-align: right;}
 .text-box1 { margin-top:13px; font-size:1.5rem; }
+
+/*0628*/
+.banner_pc {display: block;}
+.banner_tablet {display: none;}
+.banner_mobile {display: none;}
+
+/*0630*/
+.hd-div3 .hd-bg3 img { width:100%; object-fit: contain !important;}
+.hd-div3 .user-1 img { object-fit: contain; }
