--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -5421,3 +5421,12 @@ p.dib{display:inline-block !important;}
 .rad-mg-1{margin-top:30px; margin-bottom:0; text-align: right;}
 .text-box1 { margin-top:13px; font-size:1.5rem; }
 .t_font-size { font-size:1.5rem !important; }
+
+/*0628*/
+.banner_pc {display: block;}
+.banner_tablet {display: none;}
+.banner_mobile {display: none;}
+
+/*0630*/
+.hd-div3 .hd-bg3 img { width:100%; object-fit: contain !important;}
+.hd-div3 .user-1 img { object-fit: contain; }
