--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -14,6 +14,15 @@
 				width:235px;
 	    	};
     </style>
+    
+    	
+	<meta property="og:title" content="DealingArt">
+	<meta name=”description” content="개인간 미술품 거래 마켓플레이스">
+	<meta name=”keywords” content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
+	<meta property="og:url" content="https://www.dealing-art.com">
+	<meta property="og:image" content="https://www.dealing-art.com/resources/img/logo_new.png">
+	<meta property="og:type" content="website">
+	
   </head>
 <body>
 	<div class="wrap">
