SEO 메타테그 적용

--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -15,6 +15,15 @@
     
     <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
+    <meta charset="utf-8">
+	<title>딜링아트</title>
+	<meta property="og:title" content="DealingArt">
+	<meta name=”description” content="개인간 미술품 거래 마켓플레이스">
+	<meta name=”keywords” content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
+	<meta property="og:url" content="https://www.dealing-art.com">
+	<meta property="og:image" content="https://www.dealing-art.com/resources/img/logo_new.png">
+	<meta property="og:type" content="website">
+    
 </head>
 
 <body>
