--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -102,12 +102,25 @@ jQuery(document).ready(function() {
 	var conTitleHtml = "";
 	conTitleHtml += '<h3>My Gallery</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
-	conBtn.innerHTML += '<a href="/collection_reg"><img src="resources/img/mypage/mycon-3.png" /></a>';
+	//conBtn.innerHTML += '<a href="/collection_reg"><img src="resources/img/mypage/mycon-3.png" /></a>';
+	conBtn.innerHTML += '<a href="javascript:collectionRegMove();"><img src="resources/img/mypage/mycon-3.png" /></a>';
 	$("#myCollection").addClass("active");
 	
 	myCollectionList();
 	
 });   
+
+function collectionRegMove() {
+	
+	modalConfirm("알림", "시스템 기능 개선으로 인하여 삭제 및 비공개 처리가 불가능합니다. 등록하시겠습니까?", 
+	
+	function(confirm){
+		if(confirm){
+				location.href = "/collection_reg";					
+		}
+	});
+
+}
 
 function myCollectionList(){
 	console.log(result);
