--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -1163,7 +1163,7 @@ function selectWork(obj){
 			$("#workMainImgUrl1").attr("src", result.workMainImgUrl);
 			$("#workImgFrtUrl1").attr("src", result.workImgFrtUrl);
 			$("#workImgRerUrl1").attr("src", result.workImgRerUrl);
-			$("#workGrtUrl1").val(result.workGrtUrl);
+			//$("#workGrtUrl1").val(result.workGrtUrl);
 			$("#workImgLefUrl1").attr("src", result.workImgLefUrl);
 			$("#workImgRitUrl1").attr("src", result.workImgRitUrl);
 			$("#workImgTopUrl1").attr("src", result.workImgTopUrl);
